# sendmail-virtualmailbox

./: CHANGES  DISTFILES  INSTALL  INSTALL.dovecot  LICENSE  Makefile.am  Makefile.in  README  RELEASE_NOTES  aclocal.m4  configure  configure.ac  maildrop-configure  procmail-localconfig.patch  virtmail.m4
example/: INSTALL-MANUALLY  a-part-of-aliases  a-part-of-dovecot.conf  a-part-of-sendmail.mc  centos-packages  clamav-configure  dovecot-configure  dovecot-pkgsysconfdir.patch  dovecot-setup  dovecot-virtuser-passwd  dovecot.conf-example  etc-group  etc-passwd
example/local-sendmail/: a-part-of-logrotate.conf  a-part-of-sendmail.mc  maildrop-configure  sendmail-site.config.m4
example/usr-sbin-sendmail/: a-part-of-logrotate.conf  a-part-of-sendmail.mc  maildrop-configure  procmail-localconfig.patch  sendmail-site.config.m4  virtmail.m4
examples/: a-part-of-sendmail.mc  dovecot-virtuser-passwd  maildroprc  procmailrc  procmailrcs-example.jp.cf  virtusertable
src/: Makefile.am  Makefile.in
src/etc/: Makefile.am  Makefile.in  access.in  etc-makefile.in  generics-domains.in  genericstable.in  local-host-names.in  maildroprc.in  procmailrc.in  virtuser-domains.in  virtusertable.in
src/sbin/: Makefile.am  Makefile.in  mailbox-to-maildir.PL  make-vmailbox.SH  sendmailctl.SH  sidctl.SH
